; ModuleID = '/home/carl/AnghaBench/xhyve/src/vmm/extr_vmm_instruction_emul.c_vie_write_bytereg.c'
source_filename = "/home/carl/AnghaBench/xhyve/src/vmm/extr_vmm_instruction_emul.c_vie_write_bytereg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vie = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32, %struct.vie*, i32)* @vie_write_bytereg to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @vie_write_bytereg(i8* %0, i32 %1, %struct.vie* %2, i32 %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.vie*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  store i8* %0, i8** %5, align 8
  store i32 %1, i32* %6, align 4
  store %struct.vie* %2, %struct.vie** %7, align 8
  store i32 %3, i32* %8, align 4
  %15 = load %struct.vie*, %struct.vie** %7, align 8
  %16 = call i32 @vie_calc_bytereg(%struct.vie* %15, i32* %14, i32* %13)
  %17 = load i8*, i8** %5, align 8
  %18 = load i32, i32* %6, align 4
  %19 = load i32, i32* %14, align 4
  %20 = call i32 @vm_get_register(i8* %17, i32 %18, i32 %19, i32* %9)
  store i32 %20, i32* %12, align 4
  %21 = load i32, i32* %12, align 4
  %22 = icmp eq i32 %21, 0
  br i1 %22, label %23, label %44

23:                                               ; preds = %4
  %24 = load i32, i32* %8, align 4
  store i32 %24, i32* %10, align 4
  store i32 255, i32* %11, align 4
  %25 = load i32, i32* %13, align 4
  %26 = icmp ne i32 %25, 0
  br i1 %26, label %27, label %32

27:                                               ; preds = %23
  %28 = load i32, i32* %10, align 4
  %29 = shl i32 %28, 8
  store i32 %29, i32* %10, align 4
  %30 = load i32, i32* %11, align 4
  %31 = shl i32 %30, 8
  store i32 %31, i32* %11, align 4
  br label %32

32:                                               ; preds = %27, %23
  %33 = load i32, i32* %9, align 4
  %34 = load i32, i32* %11, align 4
  %35 = xor i32 %34, -1
  %36 = and i32 %33, %35
  %37 = load i32, i32* %10, align 4
  %38 = or i32 %37, %36
  store i32 %38, i32* %10, align 4
  %39 = load i8*, i8** %5, align 8
  %40 = load i32, i32* %6, align 4
  %41 = load i32, i32* %14, align 4
  %42 = load i32, i32* %10, align 4
  %43 = call i32 @vm_set_register(i8* %39, i32 %40, i32 %41, i32 %42)
  store i32 %43, i32* %12, align 4
  br label %44

44:                                               ; preds = %32, %4
  %45 = load i32, i32* %12, align 4
  ret i32 %45
}

declare dso_local i32 @vie_calc_bytereg(%struct.vie*, i32*, i32*) #1

declare dso_local i32 @vm_get_register(i8*, i32, i32, i32*) #1

declare dso_local i32 @vm_set_register(i8*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
